v1.31
Fixed a bug cause invalid IVFC level 6 when romfs section is big

v1.30
Added TitleKey encryption
Added Signature generation
Added NPDM verification and signature zeroing
Added NPDM backup
Fixed sdkversion valid range

hacPackTools-NACP v1.03:
Fixed videocapture invalid value error message
Added error message for unknown xml elements

v1.20-r3
hacPackTools-NACP v1.02:
Fixed a bug cause compiled version of hacPackTools-NACP not running on windows machines

v1.20-r2
hacPackTools-NACP v1.01:
Added RequiredNetworkServiceLicenseOnLaunch and UserAccountSwitchLock options for hacPackTools-NACP

v1.20
hacPack:
Added option for creating Metadata nca from cnmt
hacPack-GUI:
Added option for creating Metadata nca from cnmt in gui
hacPackTools:
Added hacPackTools-NACP v1.00

v1.12
Fixed a bug cause making bad PFS0 for files larger than 4GB in 32-bit platforms

v1.11
Added buffer for creating PFS0
Increased buffer size for creating RomFS

v1.10
Added support for creating SystemProgram and SystemData Metadata NCA
Added titleversion option for creating Metadata NCA

v1.02
GUI:
Fixed a bug cause failure of building meta ncas with legal information nca and without data nca

v1.01
Fixed a bug cause failure of control.nacp validation in titles without AmericanEnglish title name and title author

v1.00
Initial Release.