@@ -1,3 +1,7 @@
+v.32
+Changed hash block size for better compatibility
+Increased NCA section encryption buffer size
+
 v1.31
 Fixed a bug cause invalid IVFC level 6 when romfs section is big
 
